<resources>
    <string name="app_name">Work Flow</string>
    <string name="forget_password"><u>Forget Password</u></string>
    <string name="login">Login</string>
    <string name="username_or_email">Username</string>
    <string name="password">Password</string>
    <string name="recover_text">Please enter your email address. \nYou will receive a link to create a new password via email</string>
    <string name="submit">Submit</string>
    <string name="forget_your_password">Forget Your Password..?</string>
    <string name="back_to_login">Back to login</string>
    <string name="todo">TODO</string>
    <string name="title_activity_event_details">Event_details</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Akalanka Jayalath</string>
    <string name="nav_header_subtitle">President</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="error_message_loading_users">There seems to have been some error.</string>
    <string name="default_message_loading_users">Press the button to load people!</string>
    <string name="github">Github</string>
    <string name="search_event">Search Event...</string>
    <string name="approved">approved</string>
    <string name="pending">Pending</string>
    <string name="save">Save</string>

    <string-array name="planets_array">
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
    </string-array>

</resources>
