<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorHeader"

    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
   >
<LinearLayout
    android:layout_marginTop="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/name"
                android:fontFamily="@font/poppinsbold"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_alignParentTop="true"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            <View
                android:id="@+id/line"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/thumbColor" />

        <TextView
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/poppinsmedium"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle" />
        </LinearLayout>
</LinearLayout>

    <EditText
        android:layout_width="200dp"
        android:paddingLeft="5dp"
        android:textSize="14sp"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/poppinsregular"
        android:textColorHint="@color/colorHeader"
        android:hint="@string/search_event"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark" />
</LinearLayout>
