<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:background="@drawable/background"
    tools:context="com.tecOps.workflow.view.login_page"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:src="@drawable/logo" />


            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:textSize="15sp"
                android:layout_marginRight="-12dp"
                android:layout_marginLeft="-12dp"
                android:textColor="@color/colorTextinput"
                android:background="@drawable/text"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/username_or_email" />



            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="-12dp"
                android:layout_marginLeft="-12dp"
                android:inputType="textPassword"
                android:textColor="@color/colorTextinput"
                android:background="@drawable/text"
                android:textColorHint="@color/colorPrimary"
                android:textSize="15sp"
                android:paddingLeft="15dp"
                android:hint="@string/password"/>




        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:fontFamily="@font/poppinsbold"
            android:background="@drawable/login"
            android:textStyle="bold"
            android:layout_marginBottom="6dp"
            android:padding="12dp"
            />

        <TextView
            android:id="@+id/link_fogot"
            android:layout_marginTop="15dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/forget_password"
            android:fontFamily="@font/poppinsmedium"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            android:gravity="center"
            android:textSize="14dip"/>




    </LinearLayout>

</ScrollView>