<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <ImageView

            android:id="@+id/imageView"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:src="@drawable/logo" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/forget_your_password"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView3"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/recover_text"
            android:textAlignment="center"
            android:textSize="13sp" />



        <EditText
            android:drawableStart="@drawable/email"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/editText2"
            android:textSize="15sp"
            android:textColor="@color/colorTextinput"
            android:textColorHint="@color/colorTextinput"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint=" Enter Email for recovery"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dip"
            android:textAlignment="viewStart" />


    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/repple_effect_login"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/submit"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textAllCaps="false"
        android:background="@drawable/effect_back"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/back_to_login"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold" />


    </android.support.v7.widget.LinearLayoutCompat>
</RelativeLayout>


